lab1/Test/L1-A-10-36.output
Error Type A at Line 6
Error Type A at Line 16
Error Type A at Line 77
Error Type B at Line 80
