lab1/Test/L1-A-10-36.cmm
float hP5c ( ) {
  int YY ;
}
struct {
  struct {
  }JYF3RU08AKh7Nwmf0I , KjIfrrDFyGAJhsLqC :, bmqa0FshC0vsUNv7N 
    = k2sfqbV3KuJLaohQ8 ;
}rlik_qMrGaIkCNdLIw ( struct ZIudaE3kLCb b ) {
  if ( AkRLb8EQovvqbkbF )   return oym2S8F5s_v04i2 
    = d_i9qOCLB0yWWwgB != F / - ALjIPBJHTw3uF1a3wma [ 
    b4cysn || RJ65nO8wWzcKDT09BLmh && tPfQMPoAa7uiE == 
    Ub2LC0j6NPZ6 + N0zICAoDsH3YSSa_S7Mt * ! eC5KR ( qoeU 
    , Ph6 >= mLUxf - hNrJYzGfqJwMzYsfjyRT * ( iTlvq2_9nj7s1crw2ER 
    && d > zrdEz5CQosf ( cHZwNv2wkt = gJU_DZ594Dk18 = 
    ECaK_ghgJuWGDaiE || meV51WrO33YL < hu_Ejy219riBDyKM 
    ) ) ^&& - EDCM6hvVRve0 + 1436875570.1169896939 <= 
    k1i4EsvjCx ( ) ) - ! 166092140 ] . gy1ZWZUXDVqg ;

}
int ;
int ;
struct d {
}E6 , sfFitaAky6 [ 1142653988 ] 

;
int ee2h3YQ ( ) {
{
    if ( I5I0tmPPvLG3dZTXorm7 ) {
    }else     while ( BWQONsolfFL )     fi5d7NgLQY2tEKq 
      ;


  }}
int TRBcP9MbVkHVo ( ) {
}
int ;
int iqt2 ( int F6GGV44PUwutYJOFRy , int t4jTPuT10rdqmfO4j 
  ) {
}
int ;
int ;
int ;
int ;
int asEnIX4mtg ( ) {
}
int ;
int ;
int QOQJESma ( ) {
}
int ;
int rCXT1mh445Dg8l ( ) {
}
int ;
int mepYsHhIzMWkZh ( ) {
}
int s ( ) {
  UcptadGUZ8J ;
  while ( Qo )   X2bmXCqeGwfW ;

}
int QZspe3Igzdn ( ) {
}
int cZ2GjOGsrop2ZeHNEY2 ( ) {
}
int ;
int ;
int ;
int NI6cG ( ) {
}
int jDAPZr1 ( ) {
}
int ;
int ;
int Wt1Nc3EarKppsofkcH ( ) {
  if ( DfLQDL )   bOQn0qi ;
else   if ( WhwyuIarAHaBaY_o )   eT_ ;
`

}
else 